Refactored GUI